# fastapi_crud_demo

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7b0978dcf4c7_create_initial_tables.py  b5ca343d986a_create_initial_tables.py  c6ec858e956c_create_initial_tables.py  ff8da24de7c7_create_initial_tables.py
src/: db.py  main.py  models.py
